2010-08-28 MA Yue <velly.empire@gmail.com>

    * Add Openfetion, Turpial for Ubuntu, Brasero
    * Delete Firefox Addon version, add Radioget Desktop version instead.
    * Update the path of SweetHome3D, for new version.
    * Fix the bug about bioclipse path.
    
2010-07-28 Homer Xing <homer.xing@gmail.com>

    * Fix bug about SweetHome3D installing path, issue 1020.
    * Fix bug about RemasterSys installing, issue 1023.
    * Fix bug about a lot of third party repositories, issue 1022.
    * Fix issue about gnomekeyring.cancellederror, issue 999.
    * Fix bug about creating imagemagick icon, issue 1025.

2010-07-27 CHEN Yangyang <skabyy@gmail.com>

    * Optimize the repository configure pane
    * Add "add third party repository area" to repository configure pane
    * Fix some bugs

2010-07-27 HAN Haofu <gtxx3600@gmail.com>

	* Allow user to add new package-entry
	* Allow user to modify package-detail
	* Allow user to change package-icon
	* Allow user to add/remove package to/from Favourite

2010-07-27 Homer Xing <homer.xing@gmail.com>

    * Terminal window grabs focus.
    * Add KDevelop, an IDE similar to Visual Studio.
    * Add Kile, a LaTeX editor.
    * Add LyX, "what you see is what you mean" LaTeX editor.
    * Add Pdftk, a command line tool which can split, merge, encrypt and uncompress PDF files.
    * Add PDFedit, add marks and annotations on PDF files.
    * Add GoldenDict, one of the best dictionary applications.
    * Add Artha, looking up synonyms and antonyms.
    * Add MyTourbook, excellent route planner, and GPS log analyser software.
    * Do not store downloaded files in /var/cache/ailurus/ any more.
    * Add RouteConverter, converts between different GPS track formats.
    * Add Backintime, incremental backup tool supporting schedule.
    * Add Geogebra, learning algebra and geometry.
    * Add Celestia, 3D astronomy simulator.
    * Add Kstars, planetarium software.
    * Add Handbrake, video transformer.
