@@ -28,10 +28,10 @@ tsinghuatex = 'http://thuthesis.googlecode.com/files/thuthesis-4.5.1.tgz'
 nscript = 'http://www.nanolx.org/free/NScripts-3.6.tar.bz2'
 cdt = 'http://download.eclipse.org/tools/cdt/releases/galileo/dist/cdt-master-6.0.0.zip'
 pydev = 'http://prdownloads.sourceforge.net/pydev/org.python.pydev.feature-1.5.7.2010050621.zip'
-pbcdev32 = 'http://voltar.org/pbcfiles/libpbc-dev_0.5.4-1_i386.deb'
-pbcdev64 = 'http://voltar.org/pbcfiles/libpbc-dev_0.5.4-1_amd64.deb'
-pbc32 = 'http://voltar.org/pbcfiles/libpbc0_0.5.4-1_i386.deb'
-pbc64 = 'http://voltar.org/pbcfiles/libpbc0_0.5.4-1_amd64.deb'
+#pbcdev32 = 'http://voltar.org/pbcfiles/libpbc-dev_0.5.4-1_i386.deb'
+pbcdev64 = 'http://voltar.org/pbcfiles/libpbc-dev_0.5.8_amd64.deb'
+#pbc32 = 'http://voltar.org/pbcfiles/libpbc0_0.5.4-1_i386.deb'
+pbc64 = 'http://voltar.org/pbcfiles/libpbc0_0.5.8_amd64.deb'
 gnomeartng_hardy = 'http://download.berlios.de/gnomeartng/gnomeartng-0.7.0-hardy.deb'
 gnomeartng_intrepid = 'http://download.berlios.de/gnomeartng/gnomeartng-0.7.0-intrepid.deb'
 gnomeartng_jaunty = 'http://download.berlios.de/gnomeartng/gnomeartng-0.7.0-jaunty.deb'
