@@ -1,3 +1,7 @@
+2010-09-01 MA Yue <velly.empire@gmail.com>
+
+    * Fix some bug about moovida, pbc and xbmc
+
 2010-08-28 MA Yue <velly.empire@gmail.com>
 
     * Add Openfetion, Turpial for Ubuntu, Brasero
